# python-nostr

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/nostr_core/: models.py  validator.py
src/nostr_relay/: store.py
src/nostr_relay/docs/: STORE.md
tests/test_core/: test_models.py  test_validator.py
tests/test_relay/: test_store.py
